--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Este es mi proyecto
 Motivacion: aprender git con el libro Pro Git
 
 Segunda motivacion: ser muy capo en web
+
+Tercera motivacion: y bueno, tener plata
