modificado el README con mas sobre las motivaciones

--- a/README
+++ b/README
@@ -5,3 +5,5 @@ Motivacion: aprender git con el libro Pro Git
 Segunda motivacion: ser muy capo en web
 
 Tercera motivacion: y bueno, tener plata
+
+Cuarta motivacion: y bueno, con esa plata hacer cosas que ayuden a los necesitados, y por supuesto comprarme una mac para programar de forma mas rapida
